--- a/pages/about.html
+++ b/pages/about.html
@@ -21,9 +21,23 @@
             <img src="../images/logo (1).svg" alt="logo" />
             <img src="../images/Ygg.svg" alt="logo text" class="logotxt" />
           </a>
+          <img
+            src="../images/menu--v1.png"
+            class="hamburger"
+            alt="hamburger menu"
+          />
         </div>
+
         <div>
-          <ul>
+          <ul class="ul">
+            <li>
+              <img
+                src="../images/close.svg"
+                class="closeMenu"
+                alt="close menu"
+              />
+            </li>
+            <li class="home" style="color:#257ebf;"><a href="../index.html">Home</a></li>
             <li><a id="about" href="./about.html">About</a></li>
             <li><a href="./contribute.html">Contribute</a></li>
             <li><a href="./contact.html">Contact Us</a></li>
@@ -43,18 +57,26 @@
     <main>
       <div class="divklass1">
         <h2>Background</h2>
-        <img class="imgdivklass" src="../images/colour mix.png" style="width: 3.5%" />
+        <img
+          class="imgdivklass"
+          src="../images/colour mix.png"
+          style="width: 3.5%"
+        />
         <p>
           With the advent of Web3, we have seen litany of terms and concepts -
           wallets, technologies, protocols, chains - blocking the way to
-          seamless adoption due to their ambuiguity. <b>Ygg</b> is solving this
+          seamless adoption due to their ambuiguity. <b>YGG</b> is solving this
           friction by providing an <i>all-in-one</i> layman’s dictionary (with
           infographics) for both the average crypto noob and experienced users.
         </p>
       </div>
       <div class="divklass1">
         <h2 class="h2">About the authors</h2>
-        <img class="imgdivklass" src="../images/colour mix.png" style="width: 3.5%" />
+        <img
+          class="imgdivklass"
+          src="../images/colour mix.png"
+          style="width: 3.5%"
+        />
         <div class="divklass-flex">
           <img src="../images/profile-author1.svg" />
           <p>
@@ -62,11 +84,12 @@
             creating streamlined and intuitive controls through programming and
             design. He is talented at planning and creating inviting graphics
             for web and mobile app interfaces using Figma, HTML5, SASS,
-            Bootstrap and React Js.<br/><br/> He has also founded and successfully exited
-            from two tech startups - CANIP firm and Internapp Africa - the
-            latter which won numerous awards as the best employee sourcing /
-            STEM talent matching platform at the 2021 AFJC Global Pitch Competition
-            powered by Bizskills Academy, Canada.
+            Bootstrap and React Js.<br /><br />
+            He has also founded and successfully exited from two tech startups -
+            CANIP firm and Internapp Africa - the latter which won numerous
+            awards as the best employee sourcing / STEM talent matching platform
+            at the 2021 AFJC Global Pitch Competition powered by Bizskills
+            Academy, Canada.
           </p>
         </div>
         <div class="divklass-flex1">
@@ -87,8 +110,8 @@
           <li><a href="#">Send feedback</a></li>
           <li><a href="">Privacy policy</a></li>
           <li><a href="">Terms of service</a></li>
-          <li><a href="">Contribute</a></li>
-          <li id="contact-id"><a href="">Contact Us</a></li>
+          <li><a href="./contribute.html">Contribute</a></li>
+          <li id="contact-id"><a href="./contact.html">Contact Us</a></li>
         </ul>
         <div id="divblock">
           <p>Designed by Israel Abazie &copy; Copyright 2022, YGG Inc.</p>
@@ -97,6 +120,25 @@
       </div>
     </footer>
 
-    <script src="../script.js"></script>
+    <script>
+      const closeMenu = document.querySelector(".closeMenu");
+      const ul = document.querySelector(".ul");
+      const hamburger = document.querySelector(".hamburger");
+
+      hamburger.addEventListener("click", () => {
+        if (ul.style.display === "none") {
+          ul.style.display = "block";
+        } else {
+          ul.style.display = "none";
+        }
+      });
+      closeMenu.addEventListener("click", () => {
+        if (ul.style.display === "block") {
+          ul.style.display = "none";
+        } else {
+          ul.style.display = "block";
+        }
+      });
+    </script>
   </body>
 </html>
