new update in Js file

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <li id="contact-id"><a href="./pages/contact.html">Contact Us</a></li>
         </ul>
         <div id="divblock">
-          <p>Designed by Israel Abazie &copy; Copyright 2022, YGG Inc.</p>
+          <p class="divblock_p">Designed by Israel Abazie &copy; Copyright 2022, YGG Inc.</p>
           <p>All rights reserved.</p>
         </div>
       </div>
