--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../CSS/style.css" rel="stylesheet" type="text/css" />
+    <link href="../images/logo (1).svg" rel="icon" type="image/svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -95,7 +96,7 @@
           <li id="contact"><a href="./contact.html">Contact Us</a></li>
         </ul>
         <div id="divblock">
-          <p>Designed by Israel Abazie &copy; Copyright 2022, YGG Inc.</p>
+          <p class="divblock_p">Designed by Israel Abazie &copy; Copyright 2022, YGG Inc.</p>
           <p>All rights reserved.</p>
         </div>
       </div>
