--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="Web3, NFT, Blockchain, Dictionary, Smart contracts, DAO, Ethereum" />
+    <meta name="description" content=" With the advent of Web3, we have seen litany of terms and concepts -
+    wallets, technologies, protocols, chains - blocking the way to
+    seamless adoption due to their ambuiguity. YGG is solving this
+    friction by providing an all-in-one layman’s dictionary (with
+    infographics) for both the average crypto noob and experienced users." />
+    <meta name="author" content="Israel Abazie" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./CSS/style.css" rel="stylesheet" type="text/css" />
